--- a/templates/dashboard/grupos.html
+++ b/templates/dashboard/grupos.html
@@ -115,7 +115,7 @@
                     "render": function (data, type, row) {
                         return `
                         <div class="btn-group" role="group">
-                            <button class="btn btn-warning btn-sm btnModificar me-2" data-id_grupo="${row.id_grupo}" title="Modificar"><i class="fas fa-cog"></i></button>
+                            <button class="btn btn-warning btn-sm btnModificar me-2" data-id_grupo="${row.id_grupo}" title="Modificar"><i class="fas fa-pencil-alt"></i></button>
                             <button class="btn btn-danger btn-sm btnEliminar" data-id_grupo="${row.id_grupo}" title="Eliminar"><i class="fas fa-times"></i></button>
                         </div>
 
