--- a/templates/dashboard/ambientes.html
+++ b/templates/dashboard/ambientes.html
@@ -200,7 +200,7 @@
                     "data": null, "className": 'dt-body-center',
                     "render": function (data, type, row) {
                         return `
-                            <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idambiente}" title="Modificar"><i class="fas fa-cog"></i></button>
+                            <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idambiente}" title="Modificar"><i class="fas fa-pencil-alt"></i></button>
                             <button class="btn btn-danger btn-sm btnEliminar" data-id="${row.idambiente}" title="Eliminar"><i class="fas fa-times"></i></button>
                             <button class="btn btn-secondary btn-sm btnDarDeBaja" data-id="${row.idambiente}" title="Dar de Baja"><i class="fas fa-arrow-down"></i></button>
                         `;
