--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -198,7 +198,7 @@
                     "render": function (data, type, row) {
                         return `
                             <button class="btn btn-primary btn-sm btnVer" data-id="${row.idcurso}" title="Ver"><i class="fas fa-eye"></i></button>
-                            <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idcurso}" title="Modificar"><i class="fas fa-cog"></i></button>
+                            <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idcurso}" title="Modificar"><i class="fas fa-pencil-alt"></i></button>
                             <button class="btn btn-danger btn-sm btnEliminar" data-id="${row.idcurso}" data-nombre="${row.nombre}" title="Eliminar"><i class="fas fa-times"></i></button>
                         `;
                     }
