--- a/templates/dashboard/cursosxescuela.html
+++ b/templates/dashboard/cursosxescuela.html
@@ -41,11 +41,11 @@
         <hr class="border-black" style="margin-bottom: 0%;">
         <div class="card-body">
             <div class="table-responsive" id="miTabla">
-                <table class="table table-striped table-bordered tabla-cursos" style="width:100% " id="tabla-cursos">
+                <table class="table table-striped tabla-cursos" style="width:100% " id="tabla-cursos">
                     <thead>
                         <tr>
                             <th style="text-align:center">Código</th>
-                            <th style="width: 30%; text-align: center">Nombre del curso</th>
+                            <th style="text-align: center">Nombre del curso</th>
                             <th style="text-align:center">Ciclo</th>
                             <th style="text-align:center">N° Grupos</th>
                             <th><input type="checkbox" class="form-check-input me-3 border border-dark" onclick="seleccionar_toda()" id="est"></th>
