--- a/templates/dashboard/docentes.html
+++ b/templates/dashboard/docentes.html
@@ -20,8 +20,8 @@
             <table id="tabla-docente" class="table table-striped" style="width:100%">
                 <thead>
                     <tr>
-                        <th style="width: 4%; text-align:center">ID</th>
-                        <th style="width: 30%; text-align:center">Nombres</th>
+                        <th style="width: 10%; text-align:center">ID</th>
+                        <th style="width: 40%; text-align:center">Nombres</th>
                         <th style="width: 15%; text-align:center">Correo</th>
                         <th style="width: 15%; text-align:center">Teléfono</th>
                         <th style="width: 5%; text-align:center">Opciones</th>
@@ -159,7 +159,7 @@
                 "data": null,"className": 'dt-body-center',
                 "render": function(data, type, row) {
                     return `
-                        <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idpersona}" title="Modificar"><i class="fas fa-cog"></i></button>
+                        <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idpersona}" title="Modificar"><i class="fas fa-pencil-alt"></i></button>
                         <button class="btn btn-danger btn-sm btnEliminar" data-id="${row.idpersona}" data-nombre="${row.nombre}" title="Eliminar"><i class="fas fa-times"></i></button>
                     `;
                 }
