--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -192,7 +192,7 @@
                 { "data": "ciclo", "className": 'dt-body-center'},
                 { "data": "tipo_curso" },
                 { "data": "estado" },
-                { "data": "nombre_plan_estudio" },
+                { "data": "nombre_plan_estudio", "className": 'dt-body-center'},
                 {
                     "data": null,
                     "render": function (data, type, row) {
