--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -15,7 +15,7 @@
         </div>
         <div class="card-body">
             <div class="table-responsive">
-                <table id="tabla-curso" class="table table-striped table-bordered tabla-cursos" style="width:100% ">
+                <table id="tabla-curso" class="table table-striped tabla-cursos" style="width:100% ">
                     <thead>
                         <tr>
                             <th style="width:30%; text-align:center;">Nombre</th>
@@ -191,7 +191,7 @@
                 { "data": "cod_curso" },
                 { "data": "ciclo", "className": 'dt-body-center'},
                 { "data": "tipo_curso" },
-                { "data": "estado" },
+                { "data": "estado", "className": 'dt-body-center'},
                 { "data": "nombre_plan_estudio", "className": 'dt-body-center'},
                 {
                     "data": null,
