--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -211,7 +211,7 @@
 
         function cargarCursos() {
             $.ajax({
-                url: '/get_cursos',
+                url: '/datos_cursos',
                 type: 'GET',
                 contentType: 'application/json',
                 success: function (response) {
