--- a/templates/dashboard/horarios.html
+++ b/templates/dashboard/horarios.html
@@ -11,7 +11,8 @@
 </nav>
 
 <div class="card mx-2" id="card_horarios">
-    <div class="card-header bg-red-usat text-white" id="headingOne" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+    <div class="card-header bg-red-usat text-white" id="headingOne" data-bs-toggle="collapse"
+        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
         Horarios con un click
     </div>
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-bs-parent="#miAccordion">
@@ -21,48 +22,47 @@
                 <div class="col-md-10 order-md-1 order-sm-2">
                     <!-- Primer input y label -->
                     <div class="form-group row mb-3 d-flex justify-content-center">
-                        <label for="combo_semestre" class="col-form-label col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 texto-label">Semestre académico:</label>
+                        <label for="combo_semestre"
+                            class="col-form-label col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 texto-label">Semestre
+                            académico:</label>
                         <div class="col-12 col-sm-12 col-md-8 col-lg-9 col-xl-9">
                             <select class="form-select" aria-label="Default select example" id="combo_semestre">
                                 <option selected>SEMESTRE ACTUAL</option>
-                                {% for semestre in semestres %}
-                                    <option value="{{semestre[1]}}">{{semestre[1]}}</option>
-                                {% endfor %}
                             </select>
                         </div>
                     </div>
                     <!-- Segundo input y label -->
                     <div class="form-group row mb-3 d-flex justify-content-center">
-                        <label for="combo_ambiente" class="col-form-label col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 texto-label">Ambiente:</label>
+                        <label for="combo_ambiente"
+                            class="col-form-label col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 texto-label">Ambiente:</label>
                         <div class="col-12 col-sm-12 col-md-8 col-lg-9 col-xl-9">
                             <select class="form-select" aria-label="Default select example" id="combo_ambiente">
                                 <option selected>[-- SELECCIONE --]</option>
-                                {% for ambiente in ambientes %}
-                                    <option value="{{ambiente[1]}}">{{ambiente[1]}}</option>
-                                {% endfor %}
                             </select>
                         </div>
                     </div>
                     <!-- Tercer input y label -->
                     <div class="form-group row mb-3 d-flex justify-content-center">
-                        <label for="combo_grupo" class="col-form-label col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 texto-label">Grupo:</label>
+                        <label for="combo_grupo"
+                            class="col-form-label col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 texto-label">Curso:</label>
                         <div class="col-12 col-sm-12 col-md-8 col-lg-9 col-xl-9">
                             <select class="form-select" aria-label="Default select example" id="combo_grupo">
                                 <option selected>[-- SELECCIONE --]</option>
                                 {% for grupo in grupos %}
-                                    <option value="{{grupo[1]}}">{{grupo[1]}}</option>
+                                <option value="{{grupo[1]}}">{{grupo[1]}}</option>
                                 {% endfor %}
                             </select>
                         </div>
                     </div>
                     <!-- Cuarto input y label -->
                     <div class="form-group row d-flex justify-content-center" style="align-items: center;">
-                        <label for="combo_docente" class="col-form-label col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 texto-label">Docente:</label>
+                        <label for="combo_docente"
+                            class="col-form-label col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 texto-label">Docente:</label>
                         <div class="col-12 col-sm-12 col-md-8 col-lg-9 col-xl-9">
                             <select class="form-select" aria-label="Default select example" id="combo_docente">
                                 <option selected>DOCENTE FALTANTE</option>
                                 {% for docente in docentes %}
-                                    <option value="{{docente[1]}}">{{docente[1]}}</option>
+                                <option value="{{docente[1]}}">{{docente[1]}}</option>
                                 {% endfor %}
                             </select>
                         </div>
@@ -79,16 +79,16 @@
                     <div class="col-md-12" id="espacio_tabla">
                         <table class="table table-bordered text-center" id="tabla_horarios">
                             <thead class="border border-white bg-red-usat -horario-usat">
-                              <tr>
-                                <th scope="col" class="border border-white text-light">Horas</th>
-                                <th scope="col" class="border border-white text-light">Lunes</th>
-                                <th scope="col" class="border border-white text-light">Martes</th>
-                                <th scope="col" class="border border-white text-light">Miércoles</th>
-                                <th scope="col" class="border border-white text-light">Jueves</th>
-                                <th scope="col" class="border border-white text-light">Viernes</th>
-                                <th scope="col" class="border border-white text-light">Sábado</th>
-                                <th scope="col" class="border border-white text-light">Domingo</th>
-                              </tr>
+                                <tr>
+                                    <th scope="col" class="border border-white text-light">Horas</th>
+                                    <th scope="col" class="border border-white text-light">Lunes</th>
+                                    <th scope="col" class="border border-white text-light">Martes</th>
+                                    <th scope="col" class="border border-white text-light">Miércoles</th>
+                                    <th scope="col" class="border border-white text-light">Jueves</th>
+                                    <th scope="col" class="border border-white text-light">Viernes</th>
+                                    <th scope="col" class="border border-white text-light">Sábado</th>
+                                    <th scope="col" class="border border-white text-light">Domingo</th>
+                                </tr>
                             </thead>
                             <tbody style="background-color: #EEEEEE;">
                                 <!-- Las filas se llenarán dinámicamente con JavaScript -->
@@ -99,7 +99,14 @@
             </div>
             <!-- Espacio y botón verde -->
             <div class="d-flex justify-content-center mt-3"> <!-- Cambio en el margen superior -->
-                <button class="btn btn-success btn-lg" onclick="generarHorario()">Generar Horario</button> <!-- Cambio en el tamaño -->
+                <button class="btn btn-success btn-lg" onclick="generarHorario()">Generar Horario</button>
+                <!-- Cambio en el tamaño -->
+
+                <button class="btn btn-success btn-lg" onclick="RegistrarHorario()">Regstrar Horario</button>
+                <!-- Cambio en el tamaño -->
+            </div>
+            <div class="d-flex justify-content-center mt-3"> <!-- Cambio en el margen superior -->
+
             </div>
         </div>
     </div>
@@ -107,16 +114,16 @@
 
 <!-- Modal de Carga -->
 <div class="modal fade" id="loadingModal" tabindex="-1" aria-labelledby="loadingModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-body text-center">
-        <div class="spinner-border text-success" role="status">
-          <span class="visually-hidden">Loading...</span>
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-body text-center">
+                <div class="spinner-border text-success" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+                <p class="mt-3">Generando Horario, por favor espere...</p>
+            </div>
         </div>
-        <p class="mt-3">Generando Horario, por favor espere...</p>
-      </div>
     </div>
-  </div>
 </div>
 
 <!-- Script para inicializar el DataTable y realizar la búsqueda -->
@@ -131,23 +138,138 @@
                 url: 'https://cdn.datatables.net/plug-ins/2.0.3/i18n/es-ES.json',
             },
         });
+
+        // Solicitud para obtener los semestres y llenar el select
+        $.ajax({
+            url: '/get_semestre',
+            type: 'GET',
+            contentType: 'application/json',
+            success: function (response) {
+                llenarSelectSemestres(response);
+            },
+            error: function (xhr, status, error) {
+                console.log(error);
+            }
+        });
+
+        // Solicitud para obtener los ambientes y llenar el select
+        $.ajax({
+            url: '/get_ambientes',
+            type: 'GET',
+            contentType: 'application/json',
+            success: function (response) {
+                llenarSelectAmbientes(response);
+            },
+            error: function (xhr, status, error) {
+                console.log(error);
+            }
+        });
+
+        // Solicitud para obtener los docentes y llenar el select
+        $.ajax({
+            url: '/get_docentes',
+            type: 'GET',
+            contentType: 'application/json',
+            success: function (response) {
+                llenarSelectDocentes(response);
+            },
+            error: function (xhr, status, error) {
+                console.log(error);
+            }
+        });
+
+        // Solicitud para obtener los cursos y llenar el select
+        $.ajax({
+            url: '/get_cursos',
+            type: 'GET',
+            contentType: 'application/json',
+            success: function (response) {
+                llenarSelectCursos(response);
+            },
+            error: function (xhr, status, error) {
+                console.log(error);
+            }
+        });
+
+        // Agregar eventos de cambio para filtrar
+        $('#combo_semestre').change(filtrarDatos);
+        $('#combo_ambiente').change(filtrarDatos);
+        $('#combo_grupo').change(filtrarDatos);
+        $('#combo_docente').change(filtrarDatos);
     });
 
-    function generarHorario(){
+    function llenarSelectSemestres(data) {
+        let comboSemestre = $('#combo_semestre');
+        comboSemestre.empty();
+        comboSemestre.append('<option selected>SEMESTRE ACTUAL</option>');
+
+        for (let key in data) {
+            if (data.hasOwnProperty(key)) {
+                let semestre = data[key];
+                comboSemestre.append(`<option value="${semestre.idsemestre}">${semestre.descripcion}</option>`);
+            }
+        }
+    }
+
+    function llenarSelectAmbientes(data) {
+        let comboAmbiente = $('#combo_ambiente');
+        comboAmbiente.empty();
+        comboAmbiente.append('<option selected>[-- SELECCIONE --]</option>');
+
+        for (let key in data) {
+            if (data.hasOwnProperty(key)) {
+                let ambiente = data[key];
+                comboAmbiente.append(`<option value="${ambiente.idambiente}">${ambiente.nombre}</option>`);
+            }
+        }
+    }
+
+    function llenarSelectDocentes(data) {
+        let comboDocente = $('#combo_docente');
+        comboDocente.empty();
+        comboDocente.append('<option selected>DOCENTE FALTANTE</option>');
+
+        for (let key in data) {
+            if (data.hasOwnProperty(key)) {
+                let docente = data[key];
+                comboDocente.append(`<option value="${docente.iddocente}">${docente.nombre}</option>`);
+            }
+        }
+    }
+
+    function llenarSelectCursos(data) {
+        let comboGrupo = $('#combo_grupo');
+        comboGrupo.empty();
+        comboGrupo.append('<option selected>[-- SELECCIONE --]</option>');
+
+        for (let key in data) {
+            if (data.hasOwnProperty(key)) {
+                let grupo = data[key];
+                comboGrupo.append(`<option value="${grupo.idgrupo}">${grupo.nombre}</option>`);
+            }
+        }
+    }
+    var horario = [];
+    var horarioJSON = '';
+    function generarHorario() {
         // Mostrar el modal de carga
         $('#loadingModal').modal('show');
         $.ajax({
             url: '/generarHorario',
             type: 'GET',
             contentType: 'application/json',
-            success: function(response) {
+            success: function (response) {
+                horario = response;
                 console.log(response);
+                // No es necesario convertir `horario` a una cadena JSON aquí
+                horarioJSON = horario;
+                console.log(horarioJSON);
                 // Ocultar el modal de carga
                 $('#loadingModal').modal('hide');
                 // Procesar y mostrar los datos en la tabla
                 llenarTablaHorarios(response);
             },
-            error: function(xhr, status, error) {
+            error: function (xhr, status, error) {
                 console.log(error);
                 // Ocultar el modal de carga
                 $('#loadingModal').modal('hide');
@@ -188,7 +310,7 @@
         tabla.empty();
 
         for (let i = 7; i <= 22; i++) {
-            let hora = `${i}:00 - ${i+1}:00`;
+            let hora = `${i}:00 - ${i + 1}:00`;
             let fila = `<tr><th scope="row">${hora}</th>`;
 
             for (let dia of dias) {
@@ -199,6 +321,32 @@
             fila += `</tr>`;
             tabla.append(fila);
         }
+    }
+
+    function filtrarDatos() {
+        // Obtener los valores seleccionados
+        let semestre = $('#combo_semestre').val();
+        let ambiente = $('#combo_ambiente').val();
+        let curso = $('#combo_grupo').val();
+        let docente = $('#combo_docente').val();
+
+        // Filtrar datos y volver a llenar los selects y la tabla según los valores seleccionados
+
+    }
+    function RegistrarHorario() {
+        console.log(horarioJSON);
+        $.ajax({
+            url: '/insertar_horarios_ia',
+            type: 'POST',
+            contentType: 'application/json',
+            data: JSON.stringify({ horarios: horarioJSON }), // Asegúrate de enviar JSON correcto
+            success: function (response) {
+                console.log('Horario registrado exitosamente:', response);
+            },
+            error: function (xhr, status, error) {
+                console.log('Error al registrar el horario:', error);
+            }
+        });
     }
 </script>
 
