--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -176,6 +176,13 @@
 									class="align-middle">Horarios por ambiente</span>
 							</a>
 						</li>
+
+						<li class="sidebar-item">
+							<a class="sidebar-link" href="{{url_for('horarios_por_ciclo')}}">
+								<img data-image="" src="https://img.icons8.com/?size=100&id=Lx5iokyeqYUd&format=png&color=000000" alt="planning-skill"/> <span
+									class="align-middle">Horarios por Ciclo</span>
+							</a>
+						</li>
 						<!-- aca -->
 						<li class="sidebar-item">
 							<span class="sidebar-link a d-flex align-items-center" >
