COLORCITO AL NOMBRE DE DOCENTE

--- a/static/filtros_horarios/css/horarios_por_docente.css
+++ b/static/filtros_horarios/css/horarios_por_docente.css
@@ -197,8 +197,16 @@
             color: #4214fa;
             font-weight: bold;
         }
+
+        
+    }
+    .docente-nombre{
+            font-weight: bold;
+            color: white;
+            background-color: #4214fa;
     }
 }
+
 /*FIN ESTILOS HORARIO*/
 .texto-label{
     color: #70767F;
